resources/ej2-base/releasenotes/WPF/Release-Notes/v17.2.0.46/SfRichTextBoxAdv.md
## SfRichTextBoxAdv

### Bug Fixes
{:#sfrichtextboxadv-bug-fixes}
* \#241353 - Table cell shading is now rendered properly.
* \#243443 - Remove hyperlink option now works properly after opening HTML file with hyperlink.
* \#241663 - Right border of a vertical merged cell is now rendered properly.
* \#237410 - Null reference exception will no longer be thrown on disposing SfRichTextBoxAdv control after printing the document without adding the control to UI.
* \#237401 - Text inside table cell with shading is now visible while printing.
* \#239574 - Exception will no longer be thrown while performing select all (Ctrl + A) and delete contents using backspace key.
* \#244036 - No extra spaces added before the hyperlink display text while opening HTML file with hyperlink.
* \#239881 - Exception will no longer be thrown when height of table in header footer is greater than page height.
* \#241989 - Exception will no longer be thrown on disposing the previous document while opening document.
* \#238842 - The viewer is now properly interactive without scrolling to selected content while zooming.
* \#233913, \#236783, \#239205 - Merged cells in a table is now displayed with proper width.
* \#F144842 - Superscript text are now properly positioned at the top of a line.